--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "should": "^11.1.2"
   },
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha delay"
   },
   "repository": {
     "type": "git",
