--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-cache2",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "a cache framework,support local memory,redis",
   "main": "index.js",
   "files": [
@@ -11,7 +11,8 @@
   "dependencies": {
     "install": "^0.12.1",
     "node-redis-pubsub": "^3.0.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "redlock": "^3.1.2"
   },
   "devDependencies": {
     "should": "^11.1.2"
